CPE证明申请开发 本地图片保存

--- a/app/src/main/res/layout/activity_apply_for.xml
+++ b/app/src/main/res/layout/activity_apply_for.xml
@@ -135,22 +135,17 @@
                     android:src="@drawable/ic_right_in" />
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_10"
-                android:background="@color/color_F5F5F5" />
-
-            <android.support.v4.widget.NestedScrollView
+            <ExpandableListView
+                android:id="@+id/expandablelistview"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recyclerview"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-            </android.support.v4.widget.NestedScrollView>
+                android:layout_weight="1"
+                android:divider="@color/color_E6E6E6"
+                android:dividerHeight="0dp"
+                android:gravity="center"
+                android:groupIndicator="@null"
+                android:overScrollMode="never"
+                android:scrollbars="none" />
 
             <View
                 android:layout_width="match_parent"
