开发我的活动及我的活动详情 离线下载添加wifi提示 优化课程播放目录交互逻辑

--- a/app/src/main/res/layout/activity_event_detailed.xml
+++ b/app/src/main/res/layout/activity_event_detailed.xml
@@ -196,11 +196,12 @@
                     android:textSize="@dimen/sp_15"
                     android:textStyle="bold" />
 
-                <ImageView
-                    android:id="@+id/contentImage"
+                <com.ucfo.youcaiwx.widget.customview.NoScrollWebView
+                    android:id="@+id/webview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:scaleType="fitXY" />
+                    android:fadingEdge="none"
+                    android:overScrollMode="never" />
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
     </com.ucfo.youcaiwx.widget.customview.LoadingLayout>
