--- a/app/src/main/res/layout/activity_mine_event.xml
+++ b/app/src/main/res/layout/activity_mine_event.xml
@@ -11,6 +11,7 @@
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshlayout"
+        app:srlEnableNestedScrolling="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
