--- a/app/src/main/res/layout/dialog_coursedir_window.xml
+++ b/app/src/main/res/layout/dialog_coursedir_window.xml
@@ -49,10 +49,10 @@
 
             <ImageView
                 android:id="@+id/course_down_btn"
-                android:layout_width="@dimen/dp_22"
-                android:layout_height="@dimen/dp_22"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:clickable="true"
-                android:scaleType="fitXY"
+                android:padding="@dimen/dp_8"
                 android:src="@mipmap/icon_play_downblack"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -71,8 +71,8 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:background="@android:color/white"
-            android:divider="@null"
-            android:dividerHeight="@dimen/dp_1"
+            android:divider="@color/color_E6E6E6"
+            android:dividerHeight="@dimen/dp_0_5"
             android:gravity="center"
             android:groupIndicator="@null"
             android:overScrollMode="never"
