--- a/app/src/main/res/layout/item_course_teacher.xml
+++ b/app/src/main/res/layout/item_course_teacher.xml
@@ -48,6 +48,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/image_arrows"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/icon_right_in" />
