--- a/app/src/main/res/layout/dialog_agreement.xml
+++ b/app/src/main/res/layout/dialog_agreement.xml
@@ -9,7 +9,7 @@
     android:gravity="center"
     android:orientation="vertical"
     app:rv_backgroundColor="@android:color/white"
-    app:rv_cornerRadius="@dimen/dp_5">
+    app:rv_cornerRadius="@dimen/dp_8">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -81,51 +81,57 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
+        android:layout_height="@dimen/dp_0_5"
         android:background="@color/color_E6E6E6" />
 
-    <LinearLayout
+    <com.ucfo.youcaiwx.widget.customview.CricleFrameLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_38"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        app:bottomLeftRadius="@dimen/dp_8"
+        app:bottomRightRadius="@dimen/dp_8">
 
-        <com.flyco.roundview.RoundTextView
-            android:id="@+id/btn_neg"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:gravity="center"
-            android:stateListAnimator="@drawable/shape_selector_elevation"
-            android:text="@string/agreement_cancel"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_15"
-            app:rv_backgroundColor="@android:color/white"
-            app:rv_backgroundPressColor="@color/color_E6E6E6"
-            app:rv_cornerRadius_BL="@dimen/dp_8"
-            tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_43"
+            android:orientation="horizontal">
 
-        <View
-            android:id="@+id/img_line"
-            android:layout_width="0.5dp"
-            android:layout_height="match_parent"
-            android:background="@color/color_E6E6E6" />
+            <com.flyco.roundview.RoundTextView
+                android:id="@+id/btn_neg"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:gravity="center"
+                android:stateListAnimator="@drawable/shape_selector_elevation"
+                android:text="@string/agreement_cancel"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp_15"
+                app:rv_backgroundColor="@android:color/white"
+                app:rv_backgroundPressColor="@color/color_E6E6E6"
+                app:rv_cornerRadius_BL="@dimen/dp_8"
+                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />
 
-        <com.flyco.roundview.RoundTextView
-            android:id="@+id/btn_pos"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:gravity="center"
-            android:stateListAnimator="@drawable/shape_selector_elevation"
-            android:text="@string/agreement_confirm"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/sp_15"
-            app:rv_backgroundColor="@android:color/white"
-            app:rv_backgroundPressColor="@color/color_E6E6E6"
-            app:rv_cornerRadius_BR="@dimen/dp_8"
-            tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />
-    </LinearLayout>
+            <View
+                android:id="@+id/img_line"
+                android:layout_width="@dimen/dp_0_5"
+                android:layout_height="match_parent"
+                android:background="@color/color_E6E6E6" />
 
+            <com.flyco.roundview.RoundTextView
+                android:id="@+id/btn_pos"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:gravity="center"
+                android:stateListAnimator="@drawable/shape_selector_elevation"
+                android:text="@string/agreement_confirm"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/sp_15"
+                app:rv_backgroundColor="@android:color/white"
+                app:rv_backgroundPressColor="@color/color_E6E6E6"
+                app:rv_cornerRadius_BR="@dimen/dp_8"
+                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />
+        </LinearLayout>
+    </com.ucfo.youcaiwx.widget.customview.CricleFrameLayout>
 </com.flyco.roundview.RoundLinearLayout>
