--- a/app/src/main/res/layout/item_home_news.xml
+++ b/app/src/main/res/layout/item_home_news.xml
@@ -35,9 +35,9 @@
             android:layout_weight="1"
             android:ellipsize="end"
             android:maxLines="2"
-            android:text="CMA中文高清网课"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_13" />
+            android:textSize="@dimen/sp_13"
+            tools:text="CMA中文高清网课" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,9 +51,9 @@
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="讲师:杨烨"
                 android:textColor="@color/color_666666"
-                android:textSize="@dimen/sp_11" />
+                android:textSize="@dimen/sp_11"
+                tools:text="讲师:杨烨" />
 
 
             <TextView
@@ -63,9 +63,9 @@
                 android:layout_marginStart="@dimen/dp_11"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="2019-03-13"
                 android:textColor="@color/color_999999"
-                android:textSize="@dimen/sp_10" />
+                android:textSize="@dimen/sp_10"
+                tools:text="2019-03-13" />
         </LinearLayout>
 
     </LinearLayout>
