修复了优惠券不显示失效卷的问题 修复了订单页优惠券计算的问题 优化了优惠券显示效果 修改了后续教育签到逻辑

--- a/app/src/main/res/drawable/titlebar_showline.xml
+++ b/app/src/main/res/drawable/titlebar_showline.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="270"
-        android:endColor="@color/transparency"
+        android:endColor="@color/transparent"
         android:startColor="#14000000"
         android:type="linear" />
     <!--<gradient
