--- a/app/src/main/res/layout/activity_modify_password.xml
+++ b/app/src/main/res/layout/activity_modify_password.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/dp_79"
-                android:background="@color/transparency"
+                android:background="@color/transparent"
                 android:gravity="center_vertical"
                 android:hint="@string/mine_inputOldPassword"
                 android:imeOptions="actionNext"
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/dp_79"
-                android:background="@color/transparency"
+                android:background="@color/transparent"
                 android:gravity="center_vertical"
                 android:hint="@string/mine_inputNewPassword"
                 android:imeOptions="actionNext"
@@ -112,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/dp_79"
-                android:background="@color/transparency"
+                android:background="@color/transparent"
                 android:gravity="center_vertical"
                 android:hint="@string/mine_inputNewPasswordAgain"
                 android:imeOptions="actionNext"
