--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="@dimen/dp_36"
         android:layout_marginStart="@dimen/dp_36"
         android:layout_marginTop="@dimen/dp_27"
-        android:background="@color/transparency"
+        android:background="@color/transparent"
         android:drawablePadding="@dimen/dp_12"
         android:drawableStart="@mipmap/icon_phone"
         android:gravity="center_vertical"
@@ -56,7 +56,7 @@
         android:layout_marginEnd="@dimen/dp_36"
         android:layout_marginStart="@dimen/dp_36"
         android:layout_marginTop="@dimen/dp_35"
-        android:background="@color/transparency"
+        android:background="@color/transparent"
         android:drawableEnd="@mipmap/icon_watch_closed"
         android:drawablePadding="@dimen/dp_12"
         android:drawableStart="@mipmap/icon_pass"
@@ -83,7 +83,7 @@
         android:layout_marginEnd="@dimen/dp_36"
         android:layout_marginStart="@dimen/dp_36"
         android:layout_marginTop="@dimen/dp_35"
-        android:background="@color/transparency"
+        android:background="@color/transparent"
         android:drawableEnd="@mipmap/icon_watch_closed"
         android:drawablePadding="@dimen/dp_12"
         android:drawableStart="@mipmap/icon_pass"
@@ -117,7 +117,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/transparency"
+            android:background="@color/transparent"
             android:drawablePadding="@dimen/dp_12"
             android:drawableStart="@mipmap/icon_validatecode"
             android:gravity="center_vertical"
