--- a/app/src/main/res/layout/activity_video_play_page.xml
+++ b/app/src/main/res/layout/activity_video_play_page.xml
@@ -390,7 +390,7 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@color/transparency"
+                android:background="@color/transparent"
                 android:drawableStart="@mipmap/icon_connect_tel"
                 android:gravity="center"
                 android:text="@string/course_call"
