--- a/app/src/main/res/drawable/back_multiwave.xml
+++ b/app/src/main/res/drawable/back_multiwave.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     android:useLevel="false">
-    <solid android:color="@color/transparency" />
+    <solid android:color="@color/transparent" />
     <stroke
         android:width="@dimen/dp_1"
         android:color="#47BF7F" />
