--- a/app/src/main/res/layout/activity_commit_order.xml
+++ b/app/src/main/res/layout/activity_commit_order.xml
@@ -134,7 +134,8 @@
                         <ImageView
                             android:id="@+id/course_image"
                             android:layout_width="@dimen/dp_96"
-                            android:layout_height="@dimen/dp_58" />
+                            android:layout_height="@dimen/dp_58"
+                            android:scaleType="fitXY" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
