--- a/app/src/main/res/layout/activity_complete_and_forget.xml
+++ b/app/src/main/res/layout/activity_complete_and_forget.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="@dimen/dp_36"
         android:layout_marginStart="@dimen/dp_36"
         android:layout_marginTop="@dimen/dp_84"
-        android:background="@color/transparency"
+        android:background="@color/transparent"
         android:drawablePadding="@dimen/dp_12"
         android:drawableStart="@mipmap/icon_phone"
         android:gravity="center_vertical"
@@ -58,7 +58,7 @@
         android:layout_marginEnd="@dimen/dp_36"
         android:layout_marginStart="@dimen/dp_36"
         android:layout_marginTop="@dimen/dp_35"
-        android:background="@color/transparency"
+        android:background="@color/transparent"
         android:drawableEnd="@mipmap/icon_watch_closed"
         android:drawablePadding="@dimen/dp_12"
         android:drawableStart="@mipmap/icon_pass"
@@ -92,7 +92,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/transparency"
+            android:background="@color/transparent"
             android:drawablePadding="@dimen/dp_12"
             android:drawableStart="@mipmap/icon_validatecode"
             android:gravity="center_vertical"
