--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="@dimen/dp_36"
         android:layout_marginStart="@dimen/dp_36"
         android:layout_marginTop="@dimen/dp_70"
-        android:background="@color/transparency"
+        android:background="@color/transparent"
         android:drawablePadding="@dimen/dp_12"
         android:drawableStart="@mipmap/icon_phone"
         android:gravity="center_vertical"
@@ -132,7 +132,7 @@
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/transparency"
+            android:background="@color/transparent"
             android:drawablePadding="@dimen/dp_10"
             android:drawableTop="@mipmap/icon_wechat_btn"
             android:gravity="center"
@@ -147,7 +147,7 @@
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/transparency"
+            android:background="@color/transparent"
             android:drawablePadding="@dimen/dp_10"
             android:drawableTop="@mipmap/icon_sms_btn"
             android:gravity="center"
