--- a/app/src/main/res/layout/activity_mine_coupons.xml
+++ b/app/src/main/res/layout/activity_mine_coupons.xml
@@ -16,7 +16,6 @@
         android:layout_height="match_parent"
         app:srlEnableLoadMore="false">
 
-
         <com.ucfo.youcaiwx.widget.customview.LoadingLayout
             android:id="@+id/loadinglayout"
             android:layout_width="match_parent"
@@ -28,6 +27,7 @@
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
+                <!--可用优惠券数量 -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -61,43 +61,56 @@
                         android:textSize="@dimen/sp_14" />
                 </LinearLayout>
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recyclerview"
+                <android.support.v4.widget.NestedScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/white"
-                    android:overScrollMode="never" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:overScrollMode="never">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/white"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:paddingBottom="@dimen/dp_17">
-
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/coupon_NoMoreCouponsAvailable"
-                        android:textColor="@color/color_C7C7C7"
-                        android:textSize="@dimen/sp_12" />
+                        android:orientation="vertical">
 
-                    <View
-                        android:layout_width="@dimen/dp_1"
-                        android:layout_height="@dimen/dp_12"
-                        android:layout_marginEnd="@dimen/dp_5"
-                        android:layout_marginStart="@dimen/dp_5"
-                        android:background="@color/color_C7C7C7" />
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/recyclerview"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/white"
+                            android:overScrollMode="never" />
+                        <!--失效优惠券入口-->
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/white"
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            android:paddingBottom="@dimen/dp_17">
 
-                    <TextView
-                        android:id="@+id/btn_disabled"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/coupon_ViewExpiredCoupons"
-                        android:textColor="@color/color_FD7D74"
-                        android:textSize="@dimen/sp_12" />
-                </LinearLayout>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/coupon_NoMoreCouponsAvailable"
+                                android:textColor="@color/color_C7C7C7"
+                                android:textSize="@dimen/sp_12" />
+
+                            <View
+                                android:layout_width="@dimen/dp_1"
+                                android:layout_height="@dimen/dp_12"
+                                android:layout_marginEnd="@dimen/dp_5"
+                                android:layout_marginStart="@dimen/dp_5"
+                                android:background="@color/color_C7C7C7" />
+
+                            <TextView
+                                android:id="@+id/btn_disabled"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/coupon_ViewExpiredCoupons"
+                                android:textColor="@color/color_FD7D74"
+                                android:textSize="@dimen/sp_12" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </android.support.v4.widget.NestedScrollView>
             </LinearLayout>
         </com.ucfo.youcaiwx.widget.customview.LoadingLayout>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
