--- a/app/src/main/res/layout/dialog_takephoto.xml
+++ b/app/src/main/res/layout/dialog_takephoto.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/lLayout_bg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <LinearLayout
+    <com.flyco.roundview.RoundLinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:rv_backgroundColor="@android:color/white"
+        app:rv_cornerRadius="@dimen/dp_2">
 
         <TextView
             android:id="@+id/btn_takeCarama"
@@ -18,12 +20,13 @@
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
-            android:gravity="center"
+            android:gravity="start"
             android:paddingBottom="@dimen/dp_15"
+            android:paddingStart="@dimen/dp_15"
             android:paddingTop="@dimen/dp_15"
             android:text="@string/mine_takeCamera"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_14" />
+            android:textSize="@dimen/sp_16" />
 
         <View
             android:layout_width="match_parent"
@@ -36,11 +39,12 @@
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
-            android:gravity="center"
+            android:gravity="start"
             android:paddingBottom="@dimen/dp_15"
+            android:paddingStart="@dimen/dp_15"
             android:paddingTop="@dimen/dp_15"
             android:text="@string/mine_takePhoto"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_14" />
-    </LinearLayout>
+            android:textSize="@dimen/sp_16" />
+    </com.flyco.roundview.RoundLinearLayout>
 </LinearLayout>
