--- a/app/src/main/res/layout/popuwindow_cpe_listview.xml
+++ b/app/src/main/res/layout/popuwindow_cpe_listview.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparency"
+    android:background="@color/transparent"
     android:gravity="top"
     android:orientation="vertical">
 
