--- a/app/src/main/res/layout/view_toggle_button.xml
+++ b/app/src/main/res/layout/view_toggle_button.xml
@@ -2,7 +2,7 @@
     android:id="@+id/view_toggle_button"
     android:layout_width="@dimen/dp_100"
     android:layout_height="@dimen/dp_44"
-    android:background="@color/transparency"
+    android:background="@color/transparent"
     android:gravity="center"
     android:singleLine="true"
     android:textColor="@color/color_999999"
