--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,6 +30,7 @@
     <color name="color_FDF0E1">#FDF0E1</color>
     <color name="color_FFF8F2">#FFF8F2</color>
     <color name="color_C2C2C2">#C2C2C2</color>
+    <color name="color_button_material_light">#ffd6d7d7</color>
     <color name="color_EEFFFD">#EEFFFD</color>
     <color name="color_DBDBDB">#DBDBDB</color>
     <color name="color_919191">#919191</color>
