--- a/app/src/main/res/layout/activity_event_detailed.xml
+++ b/app/src/main/res/layout/activity_event_detailed.xml
@@ -42,8 +42,9 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_marginStart="@dimen/dp_14"
-                        android:layout_marginTop="@dimen/dp_30"
+                        android:layout_marginTop="@dimen/dp_36"
                         android:clickable="true"
+                        android:padding="@dimen/dp_8"
                         android:src="@mipmap/icon_back_white" />
 
                     <ImageView
@@ -53,7 +54,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentTop="true"
                         android:layout_marginEnd="@dimen/dp_14"
-                        android:layout_marginTop="@dimen/dp_30"
+                        android:layout_marginTop="@dimen/dp_36"
                         android:clickable="true"
                         android:src="@mipmap/icon_share" />
                 </RelativeLayout>
