--- a/app/src/main/res/layout/popuwindow_cpe_listitem.xml
+++ b/app/src/main/res/layout/popuwindow_cpe_listitem.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_relation"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_42"
-        android:layout_gravity="center"
-        android:gravity="center"
+        android:gravity="start|center_vertical"
+        android:paddingStart="@dimen/dp_12"
         android:textColor="@color/color_333333"
-        android:textSize="@dimen/sp_13" />
+        android:textSize="@dimen/sp_13"
+        tools:text="啊" />
 </LinearLayout>
